lib/src/native_iris_event_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Bindings to IrisEventHandler
class NativeIrisEventBinding {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeIrisEventBinding(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeIrisEventBinding.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int InitDartApiDL(
    ffi.Pointer<ffi.Void> data,
  ) {
    return _InitDartApiDL(
      data,
    );
  }

  late final _InitDartApiDLPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>(
          'InitDartApiDL');
  late final _InitDartApiDL =
      _InitDartApiDLPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void Dispose() {
    return _Dispose();
  }

  late final _DisposePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('Dispose');
  late final _Dispose = _DisposePtr.asFunction<void Function()>();

  void SetDartSendPort(
    int send_port,
  ) {
    return _SetDartSendPort(
      send_port,
    );
  }

  late final _SetDartSendPortPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'SetDartSendPort');
  late final _SetDartSendPort =
      _SetDartSendPortPtr.asFunction<void Function(int)>();

  void OnEvent(
    ffi.Pointer<EventParam> param,
  ) {
    return _OnEvent(
      param,
    );
  }

  late final _OnEventPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<EventParam>)>>(
          'OnEvent');
  late final _OnEvent =
      _OnEventPtr.asFunction<void Function(ffi.Pointer<EventParam>)>();

  late final addresses = _SymbolAddresses(this);
}

class _SymbolAddresses {
  final NativeIrisEventBinding _library;
  _SymbolAddresses(this._library);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<EventParam>)>>
      get OnEvent => _library._OnEventPtr;
}

class EventParam extends ffi.Struct {
  external ffi.Pointer<ffi.Int8> event;

  external ffi.Pointer<ffi.Int8> data;

  @ffi.Uint32()
  external int data_size;

  external ffi.Pointer<ffi.Int8> result;

  external ffi.Pointer<ffi.Pointer<ffi.Void>> buffer;

  external ffi.Pointer<ffi.Uint32> length;

  @ffi.Uint32()
  external int buffer_count;
}

const int kBasicResultLength = 65536;
